# online-class-user-analysis

./: README.md  pyproject.toml
notebooks/hyojoon/: preprocessing_hj.ipynb  preprocessing_hj_real_last.ipynb
notebooks/jin/: eda.ipynb  preprocessing.ipynb
notebooks/jin/HyoJoon/: preprocessing_hj.ipynb
notebooks/jinsik/: eda.ipynb
